@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022 Oracle and/or its affiliates.
+ * Copyright (c) 2019, 2023 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,15 +15,11 @@
  */
 package io.helidon.service.employee;
 
-import java.io.IOException;
 import java.io.InputStream;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionStage;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
 
 import jakarta.json.bind.Jsonb;
 import jakarta.json.bind.JsonbBuilder;
@@ -34,11 +30,10 @@ import jakarta.json.bind.JsonbConfig;
  * mock database written with in-memory ArrayList classes.
  * The strings id, name, and other search strings are validated before being
  * passed to the methods in this class.
- *
  */
 public final class EmployeeRepositoryImpl implements EmployeeRepository {
 
-    private final CopyOnWriteArrayList<Employee> eList = new CopyOnWriteArrayList<Employee>();
+    private final CopyOnWriteArrayList<Employee> eList = new CopyOnWriteArrayList<>();
 
     /**
      * To load the initial data, parses the content of <code>employee.json</code>
@@ -47,82 +42,77 @@ public final class EmployeeRepositoryImpl implements EmployeeRepository {
      */
     public EmployeeRepositoryImpl() {
         JsonbConfig config = new JsonbConfig().withFormatting(Boolean.TRUE);
-
-        Jsonb jsonb = JsonbBuilder.create(config);
-        try (InputStream jsonFile = EmployeeRepositoryImpl.class.getResourceAsStream("/employees.json")) {
+        try (Jsonb jsonb = JsonbBuilder.create(config);
+             InputStream jsonFile = EmployeeRepositoryImpl.class.getResourceAsStream("/employees.json")) {
             Employee[] employees = jsonb.fromJson(jsonFile, Employee[].class);
             eList.addAll(Arrays.asList(employees));
-        } catch (IOException e) {
-            // TODO Auto-generated catch block
-            e.printStackTrace();
+        } catch (Exception e) {
+            throw new RuntimeException(e);
         }
     }
 
     @Override
-    public CompletionStage<List<Employee>> getByLastName(String name) {
-        List<Employee> matchList = eList.stream().filter((e) -> (e.getLastName().contains(name)))
-                .collect(Collectors.toList());
-
-        return CompletableFuture.completedFuture(matchList);
+    public List<Employee> getByLastName(String name) {
+        return eList.stream()
+                .filter((e) -> (e.getLastName().contains(name)))
+                .toList();
     }
 
     @Override
-    public CompletionStage<List<Employee>> getByTitle(String title) {
-        List<Employee> matchList = eList.stream().filter((e) -> (e.getTitle().contains(title)))
-                .collect(Collectors.toList());
-
-        return CompletableFuture.completedFuture(matchList);
+    public List<Employee> getByTitle(String title) {
+        return eList.stream()
+                .filter((e) -> (e.getTitle().contains(title)))
+                .toList();
     }
 
     @Override
-    public CompletableFuture<List<Employee>> getByDepartment(String department) {
-        List<Employee> matchList = eList.stream().filter((e) -> (e.getDepartment().contains(department)))
-                .collect(Collectors.toList());
-
-        return CompletableFuture.completedFuture(matchList);
+    public List<Employee> getByDepartment(String department) {
+        return eList.stream()
+                .filter((e) -> (e.getDepartment().contains(department)))
+                .toList();
     }
 
     @Override
-    public CompletionStage<List<Employee>> getAll() {
-        return CompletableFuture.completedFuture(eList);
+    public List<Employee> getAll() {
+        return eList;
     }
 
     @Override
-    public CompletionStage<Optional<Employee>> getById(String id) {
-        return CompletableFuture.completedFuture(eList.stream().filter(e -> e.getId().equals(id)).findFirst());
+    public Optional<Employee> getById(String id) {
+        return eList.stream().filter(e -> e.getId().equals(id)).findFirst();
     }
 
     @Override
-    public CompletionStage<Employee> save(Employee employee) {
+    public Employee save(Employee employee) {
         Employee nextEmployee = Employee.of(null,
-                                            employee.getFirstName(),
-                                            employee.getLastName(),
-                                            employee.getEmail(),
-                                            employee.getPhone(),
-                                            employee.getBirthDate(),
-                                            employee.getTitle(),
-                                            employee.getDepartment());
+                employee.getFirstName(),
+                employee.getLastName(),
+                employee.getEmail(),
+                employee.getPhone(),
+                employee.getBirthDate(),
+                employee.getTitle(),
+                employee.getDepartment());
         eList.add(nextEmployee);
-        return CompletableFuture.completedFuture(nextEmployee);
+        return nextEmployee;
     }
 
     @Override
-    public CompletionStage<Long> update(Employee updatedEmployee, String id) {
+    public long update(Employee updatedEmployee, String id) {
         deleteById(id);
         Employee e = Employee.of(id, updatedEmployee.getFirstName(), updatedEmployee.getLastName(),
-                                 updatedEmployee.getEmail(), updatedEmployee.getPhone(), updatedEmployee.getBirthDate(),
-                                 updatedEmployee.getTitle(), updatedEmployee.getDepartment());
+                updatedEmployee.getEmail(), updatedEmployee.getPhone(), updatedEmployee.getBirthDate(),
+                updatedEmployee.getTitle(), updatedEmployee.getDepartment());
         eList.add(e);
-        return CompletableFuture.completedFuture(1L);
+        return 1L;
     }
 
     @Override
-    public CompletionStage<Long> deleteById(String id) {
-        return CompletableFuture.completedFuture(eList.stream()
-                                                         .filter(e -> e.getId().equals(id))
-                                                         .findFirst()
-                                                         .map(eList::remove)
-                                                         .map(it -> 1L)
-                                                         .orElse(0L));
+    public long deleteById(String id) {
+        return eList.stream()
+                .filter(e -> e.getId().equals(id))
+                .findFirst()
+                .map(eList::remove)
+                .map(it -> 1L)
+                .orElse(0L);
     }
 }
